--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
 
 header nav {
   width: 100%;
+  font-size: 1.1rem;
 }
 
 header nav ul {
@@ -119,8 +120,16 @@ header nav ul {
   display: none;
 }
 
-section .hero-title {
-  font-size: 1.5rem;
+section .hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+
+section .hero-content h1 {
+  font-size: 3.5rem;
   font-weight: 700;
   color: var(--very-dark-blue);
   margin-bottom: 1rem;
@@ -132,6 +141,11 @@ section .hero-text {
   font-weight: 400;
   color: var(--dark-grayish-blue);
   margin-bottom: 1rem;
+  letter-spacing: 2px;
+}
+
+section .hero-text p {
+  margin-top: 1rem;
 }
 
 section .hero-text button {
@@ -143,9 +157,8 @@ section .hero-text button {
   font-weight: 700;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 1.2rem;
+  margin-top: 2rem;
   border: none;
-  opacity: 0.8;
   letter-spacing: 3px;
 }
 
@@ -251,45 +264,65 @@ section.popular .popular-item p {
   color: var(--dark-grayish-blue);
 }
 
-@media (min-width: 768px) {
+
+
+@media (min-width: 1440px) {
   main {
     padding: 0 10rem;
   }
 
   section.hero {
+    grid-column: 1/3;
+    grid-row: 1/2;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 1rem;
-    grid-template-areas:
-      "heroImg heroImg heroNew"
-      "heroTitle heroText heroNew";
-    align-items: center;
+    grid-template-columns: 50rem 1fr;
+    grid-column-gap: 2rem;
+    align-items: start;
   }
 
   section.hero .hero-img {
-    grid-area: heroImg;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
   }
 
   section.hero .hero-new-container {
-    grid-area: heroNew;
-    align-self: flex-start;
-
+    grid-row: 1/2;
+    grid-column-start: 2;
+    margin-top: 0;
   }
 
-  section.hero .hero-title {
-    grid-area: heroTitle;
-    font-size: 2.4rem;
+  section.hero .hero-content {
+    font-size: 1rem;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    height: max-content;
+    height: 10rem;
+    padding: 1rem 0;
   }
 
-  section.hero .hero-text {
-    grid-area: heroText;
-    font-size: 1srem;
+  section.hero .hero-content div:first-child {}
+
+  section.hero .hero-content div:first-child h1 {
+    font-size: 2.5rem;
   }
+
+  section.hero .hero-content .hero-text {
+    margin-top: 0;
+  }
+
+
+
+
+
 
   section.popular {
     flex-direction: row;
     gap: 1rem;
+    margin-top: 5rem;
   }
 
   section.popular .popular-item span {
@@ -303,6 +336,5 @@ section.popular .popular-item p {
   section.popular .popular-item p {
     font-size: 1rem;
   }
-
 
 }
